# nexsh

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  demo.md
.github/workflows/: publish.yaml
src/: available_models.rs  header.rs  lib.rs  main.rs  prompt.rs  types.rs
