[package]
name = "nexsh"
version = "0.1.0"
edition = "2021"
authors = ["M97Chahboun"]
description = "Next-generation AI-powered shell using Google Gemini"
license = "MIT"
repository = "https://github.com/bixat/nexsh"

[dependencies]
gemini_client_rs = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
directories = "5.0"
rustyline = "12.0"
shellexpand = "3.1"