[package]
name = "nexsh"
version = "0.3.0"
edition = "2021"
authors = ["M97Chahboun"]
description = "Next-generation AI-powered shell using Google Gemini"
license = "MIT"
repository = "https://github.com/M97Chahboun/nexsh"
documentation = "https://github.com/M97Chahboun/nexsh#readme"
homepage = "https://github.com/M97Chahboun/nexsh"
keywords = ["cli", "shell", "ai", "gemini", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# Make sure binary name is correct
[[bin]]
name = "nexsh"
path = "src/main.rs"

[dependencies]
gemini_client_rs = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
directories = "5.0"
rustyline = "12.0"
chrono = "0.4"